--- a/PROYECTO2/style.css
+++ b/PROYECTO2/style.css
@@ -63,10 +63,10 @@
     color: rgb(5, 5, 5);
     right: 0;
     width: 20%;
-    border: 8px dotted lightgreen;
+    border: 2px dotted lightgreen;
     padding-left: 20px;
     height: 100%;
-    margin: 0 10px;
+    margin: 10px;
 
   }
 
