--- a/PROYECTO2/style.css
+++ b/PROYECTO2/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Unbounded:wght@200..900&display=swap');
 /* Estilos generales */
 * {
     margin: 0;
@@ -5,33 +7,42 @@
     box-sizing: border-box;
     list-style: none;
     max-width: 100%;
+    text-align: center ;
   }
 
 
   body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
     min-height: 100vh;
-    background: linear-gradient(#a3a2a0, #84d189);;
-    color: #040404;
+    background-color: #0e0c0b;
+    color: #23bbbb;
     text-align: center;
+    font-size: 20px;
   }
  
   header {
+  font-family: "Space Mono", monospace;
+  font-weight: 700;
+  font-style: normal;
     position: sticky;
     top: 0px;
     position: -webkit-sticky;
-    background-color: lightcyan;
+    background-color: whitesmoke;
     color: black;
     height: 140px;
     padding: 20px;
     text-align: center;
+  
     z-index: 1;
 
   }
+  h2, h3 {
+    color: #ef6564;
+  }
 
    .content {
-        color: rgb(0, 0, 0);
         text-align:justify;
         position: relative;
         width: 100%;
@@ -49,35 +60,41 @@
     }
 
     #parrafoinicial {
-        color: rgb(0, 0, 0);
+
         text-align:justify;
         position: absolute;
-        height: 80%;
-        padding: 20px;
+        height: 100%;
+        padding: 25px;
         width: 80%;
-        top: 20%;
+        top: 15%;
         
     }
   aside {
     position: absolute;
+    background-color:  whitesmoke;
     color: rgb(5, 5, 5);
     right: 0;
     width: 20%;
-    border: 2px dotted lightgreen;
+    border: 2px dotted #ef6564;
     padding-left: 20px;
     height: 100%;
-    margin: 10px;
-
+    margin-top: 15px;
+    margin-right: 15px;
   }
 
 .feature {
     margin: 25px;
-    border: #090909 solid 2px;
+    border: 2px dotted #ef6564;
+    margin-bottom: 50px;
 }
+
 footer{
-    position: fixed;  
-    border-radius: 2px red solid;
+    position: fixed;
+    bottom: 0;
+    border: 2px dotted rgb(0, 2, 0);
     text-align: center;
     font-size: 20px;
-    color: crimson;
+    background-color: rgb(67, 14, 22);
+    width: 100%;
+    height: 40px;
 }
